git-svn-id: svn+ssh://marioosh.net/var/svn/SCJP@11 b03a516d-aff6-4282-84b8-a76f129381e4